refactor: write better code

--- a/src/langs/fr.yml
+++ b/src/langs/fr.yml
@@ -2,6 +2,8 @@ tokenActionHud:
   cof:
     Combat:
       Skills: Compétences
+      Utils: Utilitaires
+      rollInitiative: Initiative
     Items: Objets
     Effects:
       Name: Effets
