refactor: minor improvements

--- a/src/langs/fr.yml
+++ b/src/langs/fr.yml
@@ -7,9 +7,11 @@ tokenActionHud:
     Items: Objets
     Effects:
       Name: Effets
-      Passive: Effets passifs
+      #Passive: Effets passifs
+      Permanent: Effets permanents
       Temporary: Effets temporaires
     Weapons: Armes
+    magic-plural: Attaques magiques
     Settings:
       AbbreviateSkills:
         Name: Caractéristiques en abrégé
